[package]
name = "pulldown-cmark-toc"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Generate a table of contents from a Markdown document."
readme = "README.md"
repository = "https://github.com/rossmacarthur/pulldown-cmark-toc"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "commonmark", "table", "contents"]
categories = ["text-processing"]

[dependencies]
once_cell = "1.18.0"
pulldown-cmark = { version = "0.9.3", default-features = false }
regex = "1.9.3"
